--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@
 title: Fair Custodian Blog
 email: hello@faircustodian.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Fair Custodian allows users to manage how their personal data
+  is accessed and used by companies.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "/" # the base hostname & protocol for your site
 twitter_username: FairCustodianUK
