Customised the css to look okay

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@
 title: Fair Custodian Blog
 email: hello@faircustodian.com
 description: > # this means to ignore newlines until "baseurl:"
-  Fair Custodian allows users to manage how their personal data
-  is accessed and used by companies.
+  Fair Custodian allows users to manage how their personal data is accessed and used by companies.
 baseurl: "" # the subpath of your site, e.g. /blog
 # url: "https://blog.faircustodian.com" # the base hostname & protocol for your site
 twitter_username: FairCustodianUK
