--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ variables:
   LC_ALL: C.UTF-8
 
 before_script:
+  - git submodule sync --recursive
+  - git submodule update --init --recursive
   - bundle install
 
 test:
